--- a/public/index.html
+++ b/public/index.html
@@ -17,9 +17,19 @@
       rel="stylesheet"
     />
     <link
-      href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@300;400;600&family=VT323&display=swap"
+      href="https://fonts.googleapis.com/css2?family=DotGothic16&family=Roboto+Mono:wght@300;400;600&family=VT323&display=swap"
       rel="stylesheet"
     />
+    <script
+      src="https://kit.fontawesome.com/2f3145d2d0.js"
+      crossorigin="anonymous"
+    ></script>
+    <link
+      href="https://fonts.cdnfonts.com/css/pf-tempesta-seven"
+      rel="stylesheet"
+    />
+    <link href="https://fonts.cdnfonts.com/css/pixel-square" rel="stylesheet" />
+    <link href="https://fonts.cdnfonts.com/css/sf-pixelate" rel="stylesheet" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
